# torcetti

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
.cursor/rules/: torcetti.mdc
examples/: train_linear_regression.py  train_simple_classifier.py
examples/GPT/: bpe.py  causal_self_attention.py  feed_forward.py  generate.py  gpt_model.py  hf_compat.py  trainer.py  transformer.py
tests/: test_helpers.py  test_loss.py
tests/autograd/: __init__.py  test_detach_and_grad_mode.py  test_memory_and_graph.py  test_no_grad_semantics.py
tests/core/: __init__.py  test_advanced_indexing.py  test_ops_small.py  test_tensor_core.py  test_topk.py  test_var_ddof_and_take.py
tests/factories/: __init__.py  test_creation_and_dtype_policy.py
tests/loss/: __init__.py  test_losses.py
tests/nn/: __init__.py  test_attention.py  test_batchnorm_and_layernorm.py  test_containers.py  test_embedding.py  test_layers_and_functional.py  test_module_and_params.py  test_mqa_gqa.py  test_qk_norm.py  test_rope.py  test_windowed_attention.py
tests/optim/: __init__.py  test_adam.py  test_adamw.py  test_rmsprop.py  test_sgd.py  test_state_persistence.py
tests/utils/: __init__.py  test_dataloader.py
torcetti/: __init__.py  autograd.py
torcetti.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
torcetti/core/: dtype.py  factories.py  grad_mode.py  ops.py  parameter.py  tensor.py
torcetti/loss/: crossentropy.py  mse.py
torcetti/nn/: __init__.py  activations.py  attention.py  batchnorm.py  containers.py  conv.py  dropout.py  embedding.py  functional.py  linear.py  (+3 more)
(+13 files in other folders)
