[project]
name = "torcetti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pip>=25.2",
    "playwright>=1.54.0",
    "torch>=2.7.1",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "torcetti",
]

[tool.uv.sources]
torcetti = { workspace = true }
